--- a/src/style/_syntax-highlighting.scss
+++ b/src/style/_syntax-highlighting.scss
@@ -1,11 +1,12 @@
 $brand: rgb(221, 68, 36);
+$highlight: #4C9BEB;
 
 // Colors
 $code: #333;
 $operator: $brand;
 $subtle: #aaa;
 $subtler: rgba(0,0,0,0.1);
-$comment: #999;
+$comment: $highlight;
 $value: $brand;
 
 $code-background:          transparent;
@@ -51,6 +52,9 @@ pre[class*="language-"]::before {
   right: -100%;
   box-shadow: inset 0 0 5px 1px $subtler;
 
-  background-color: $subtler;
+  background-color: #f7f7f7;
 }
 
+blockquote {
+  font-size: 130%;
+}
