--- a/src/style/_prism.scss
+++ b/src/style/_prism.scss
@@ -11,9 +11,9 @@ $code-selector-block: "pre[class*=\"language-\"]";
 $code-selector-inline: ":not(pre) > code[class*=\"language-\"]";
 
 // generic stuff
-$code-font-family: Menlo;
+$code-font-family: Anonymous Pro;
 $code-font-size: 		12px	!default;
-$code-line-height:		18px	!default;
+$code-line-height:		1.5	!default;
 
 $code-tab-size: 		4		!default;
 $code-hyphens: 			none	!default;
