Hooks article - code tweaks
Also removed some italic styling from syntax highlighting.

--- a/src/style/_prism.scss
+++ b/src/style/_prism.scss
@@ -155,10 +155,10 @@ $code-color-punctuation: $code-color-fade !default;
       color: $code-color-variable;
     }
 
-    &.property,
-    &.tag {
-      font-style: italic;
-    }
+    // &.property,
+    // &.tag {
+    //   font-style: italic;
+    // }
 
     &.important,
     &.statement {
