--- a/src/style/_syntax-highlighting.scss
+++ b/src/style/_syntax-highlighting.scss
@@ -38,7 +38,7 @@ pre[class*="language-"] {
   margin: 3em 0;
 
   @media only screen and (max-width: 600px) {
-    margin: 0 -10%;
+    margin: 1em;
     font-size: 80%;
   }
 }
