--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,7 +1,11 @@
 @import "syntax-highlighting";
 
+html {
+  font-size: 20px;
+}
+
 @media only screen and (max-width: 600px) {
   html {
-    font-size: 12px;
+    font-size: 18px;
   }
 }
